Fix img svg bug on IE

--- a/app/src/sharing/sharing.css
+++ b/app/src/sharing/sharing.css
@@ -55,5 +55,6 @@
 }
 
 .shared-permissions-img {
-  width: 30px;
+  max-width: 30px;
+  min-width: 30px;
 }
